finished phase 1
